test/resources/invalid/typecheck/InvalidUndefinedStringConstant.flo
action GET_ALL_POSTS = network(url = '/posts', method = GET);

flow POSTS = {
    string[] posts = [];
    GET_ALL_POSTS >> posts;
}
